examples/v0.5/errors/ternary_branch_type_mismatch.nova
value: N = (
    false
        ? 10
        : "Hello"
)

print(value)

// Expected Error:
// Datatype mismatch.